// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`coblocks/feature should render 1`] = `
"<!-- wp:coblocks/feature -->
<div class="wp-block-coblocks-feature"><div class="wp-block-coblocks-feature__inner has-no-padding"></div></div>
<!-- /wp:coblocks/feature -->"
`;

exports[`coblocks/feature should render content align classes 1`] = `
"<!-- wp:coblocks/feature {"contentAlign":"left"} -->
<div class="wp-block-coblocks-feature has-left-content"><div class="wp-block-coblocks-feature__inner has-no-padding"></div></div>
<!-- /wp:coblocks/feature -->"
`;

exports[`coblocks/feature should render content align classes 2`] = `
"<!-- wp:coblocks/feature {"contentAlign":"center"} -->
<div class="wp-block-coblocks-feature has-center-content"><div class="wp-block-coblocks-feature__inner has-no-padding"></div></div>
<!-- /wp:coblocks/feature -->"
`;

exports[`coblocks/feature should render content align classes 3`] = `
"<!-- wp:coblocks/feature {"contentAlign":"right"} -->
<div class="wp-block-coblocks-feature has-right-content"><div class="wp-block-coblocks-feature__inner has-no-padding"></div></div>
<!-- /wp:coblocks/feature -->"
`;

exports[`coblocks/feature should render custom text color 1`] = `
"<!-- wp:coblocks/feature {"customTextColor":"#b4d455"} -->
<div class="wp-block-coblocks-feature"><div class="wp-block-coblocks-feature__inner has-text-color has-no-padding" style="color:#b4d455"></div></div>
<!-- /wp:coblocks/feature -->"
`;

exports[`coblocks/feature should render heading levels 1`] = `
"<!-- wp:coblocks/feature {"headingLevel":1} -->
<div class="wp-block-coblocks-feature"><div class="wp-block-coblocks-feature__inner has-no-padding"></div></div>
<!-- /wp:coblocks/feature -->"
`;

exports[`coblocks/feature should render heading levels 2`] = `
"<!-- wp:coblocks/feature {"headingLevel":2} -->
<div class="wp-block-coblocks-feature"><div class="wp-block-coblocks-feature__inner has-no-padding"></div></div>
<!-- /wp:coblocks/feature -->"
`;

exports[`coblocks/feature should render heading levels 3`] = `
"<!-- wp:coblocks/feature {"headingLevel":3} -->
<div class="wp-block-coblocks-feature"><div class="wp-block-coblocks-feature__inner has-no-padding"></div></div>
<!-- /wp:coblocks/feature -->"
`;

exports[`coblocks/feature should render heading levels 4`] = `
"<!-- wp:coblocks/feature -->
<div class="wp-block-coblocks-feature"><div class="wp-block-coblocks-feature__inner has-no-padding"></div></div>
<!-- /wp:coblocks/feature -->"
`;

exports[`coblocks/feature should render heading levels 5`] = `
"<!-- wp:coblocks/feature {"headingLevel":5} -->
<div class="wp-block-coblocks-feature"><div class="wp-block-coblocks-feature__inner has-no-padding"></div></div>
<!-- /wp:coblocks/feature -->"
`;

exports[`coblocks/feature should render heading levels 6`] = `
"<!-- wp:coblocks/feature {"headingLevel":6} -->
<div class="wp-block-coblocks-feature"><div class="wp-block-coblocks-feature__inner has-no-padding"></div></div>
<!-- /wp:coblocks/feature -->"
`;

exports[`coblocks/feature should render text color 1`] = `
"<!-- wp:coblocks/feature {"textColor":"#333333"} -->
<div class="wp-block-coblocks-feature"><div class="wp-block-coblocks-feature__inner has-text-color has-333333-color has-no-padding"></div></div>
<!-- /wp:coblocks/feature -->"
`;

exports[`coblocks/feature should render with appropriate id class 1`] = `
"<!-- wp:coblocks/feature -->
<div class="wp-block-coblocks-feature coblocks-feature-1234"><div class="wp-block-coblocks-feature__inner has-no-padding"></div></div>
<!-- /wp:coblocks/feature -->"
`;
